# chamcong_pi

./: .gitignore  app.py  config.py  face_recognition_attendance_system_on_raspberry_pi_5_full_spec_ui.md  implementation.md  pyproject.toml
models/: __init__.py  attendance.py  embedding.py  setting.py  user.py
routes/: attendance_routes.py  main_routes.py  recognition_routes.py  settings_routes.py  training_routes.py  user_routes.py
services/: attendance_service.py  camera_helper.py  camera_service.py  classifier.py  face_detection.py  face_embedding.py  recognition_service.py  settings_service.py  training_service.py
static/css/: style.css
static/js/: camera.js  recognition.js  training.js
templates/: attendance.html  base.html  dashboard.html  recognition.html  settings.html  training.html  user_detail.html  user_register.html  users.html
