[project]
name = "chamcong-pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.2.6",
    "onnxruntime<1.24",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uniface>=3.1.0",
]
